--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     gap: 1rem;
     justify-content: center;
+    margin: 0 auto;
     padding-top: 4rem;
     width: 100%;
 }
