--- a/src/components/Input/Result/Result.module.css
+++ b/src/components/Input/Result/Result.module.css
@@ -1,12 +1,114 @@
 
 .wrapper {
+    display: flex;
+    flex-direction: column;
     width: 100%;
 }
 
+.resultsWrapper {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding-top: 5rem;
+}
+
+.resultItem {
+    display: flex;
+    justify-content: center;
+    padding: 3rem 6rem;
+    width: 100%;
+}
+
+.resultNumbers {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.number {
+    border: 1px solid hsl(240, 6%, 48%);
+    font-size: 1.4rem;
+    padding: 0.75rem 1.5rem;
+}
+
+.resultLights {
+    display: flex;
+    gap: 5%;
+    justify-content: flex-end;
+    width: 50%
+}
+
+@-webkit-keyframes flashing {
+    0% {
+      opacity: 0.5;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0.5;
+    }
+}
+  
+  @keyframes flashing {
+    0% {
+      opacity: 0.5;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0.5;
+    }
+}
+
+.green,
+.yellow,
+.red {
+    border-radius: 50%;
+    height: 22px;
+    width: 22px;
+}
+
+.green {
+    background-color: hsl(96, 100%, 30%);
+    box-shadow: black 0 -1px 7px 1px, inset hsl(80, 100%, 20%) 0 -1px 9px, hsl(80, 100%, 43%) 0 2px 12px;
+}
+
+.yellow {
+    background-color: hsl(60, 93%, 42%);
+    box-shadow: black 0 -1px 7px 1px, inset hsl(60, 100%, 20%) 0 -1px 9px, hsl(60, 100%, 43%) 0 2px 12px;
+}
+
+.red {
+    background-color: hsl(0, 84%, 46%);
+    box-shadow: black 0 -1px 7px 1px, inset hsl(0, 100%, 20%) 0 -1px 9px, hsl(0, 100%, 43%) 0 2px 12px;
+    -webkit-animation-name: flashing;
+          animation-name: flashing;
+    -webkit-animation-duration: 3s;
+            animation-duration: 3s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+    -webkit-animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 @media screen and (min-width: 768px) {
 
     .wrapper {
+        
+    }
+
+    .resultsWrapper {
+
+    }
+
+    .resultItem {
+
+    }
+    
+    .resultText {
         
     }
 
