--- a/src/components/Input/Result/Result.module.css
+++ b/src/components/Input/Result/Result.module.css
@@ -1,15 +1,86 @@
 
 .wrapper {
+    align-items: center;
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+
+.lockContainer {
+  border-radius: 100%;
+  height: 60px;
+  position: relative;
+  width: 60px;
+}
+
+.lock, .open {
+  background-color: #eee;
+  height: 48px;
+  left: 50%;
+  margin-left: -12px;
+  margin-top: -4px;
+  position: absolute;
+  top: 50%;
+  width: 64px;
+}
+
+.lock:before, .lock:after {
+  content: "";
+  left: 4px;
+  position: absolute;
+}
+
+.open:before, .open:after {
+  animation: open 3s ease-in-out 0s forwards;
+  content: "";
+  left: 4px;
+  position: absolute;
+}
+
+.lock:before, .open:before {
+  border-top: 8px solid #eee;
+  border-left: 8px solid #eee;
+  border-right: 8px solid #eee;
+  border-radius: 32px 32px 0 0;
+  height: 32px;
+  top: -30px;
+  transform-origin: 1px 0;
+  width: 56px;
+}
+
+.lock:after, .open:after {
+  background-color: #eee;
+  height: 40px;
+  top: -4px;
+  width: 8px;
+}
+
+.lock .keyhole,
+.open .keyhole {
+  position: absolute;
+  width: 10px;
+  height: 16px;
+  background-color: rgb(21, 23, 27);
+  border-radius: 5px;
+  top: 16px;
+  left: 27px;
+}
+
+@keyframes open {
+  0%, 10% {
+    transform: translate(0%, 0%);
+  }
+  20%, 100% {
+    transform: translate(0%, -12px);
+  }
 }
 
 .resultsWrapper {
     align-items: center;
     display: flex;
     flex-direction: column;
-    padding-top: 5rem;
+    padding: 5rem 2rem 0 2rem;
+    width: 100%;
 }
 
 .resultItem {
@@ -31,6 +102,7 @@
 }
 
 .resultLights {
+    align-items: center;
     display: flex;
     gap: 5%;
     justify-content: flex-end;
