--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,9 +1,9 @@
 .wrapper {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
+    flex-wrap: nowrap;
+    gap: 0.5rem;
     justify-content: center;
-    margin: 0 auto;
+    
     padding-top: 4rem;
     width: 100%;
 }
@@ -13,17 +13,18 @@
     border: 1px solid hsl(240, 6%, 48%);
     border-radius: 0.32rem;
     color: hsl(240, 33%, 90%);
-    font-size: 2rem;
-    height: 3rem;
-    padding: 1rem;
+    font-size: 1.75rem;
+    height: 2.5rem;
+    padding: 0.5rem;
     text-align: center;
-    width: 3rem;
+    width: 2.5rem;
 }
 
 
 @media screen and (min-width: 768px) {
     .wrapper {
         gap: 2rem;
+        margin: 0 auto;
         max-width: 1400px;
     }
     
