--- a/src/components/Input/Result/Result.module.css
+++ b/src/components/Input/Result/Result.module.css
@@ -6,107 +6,38 @@
     width: 100%;
 }
 
-.lockContainer {
-  border-radius: 100%;
-  height: 60px;
-  position: relative;
-  width: 60px;
-}
-
-.lock, .open {
-  background-color: #eee;
-  height: 48px;
-  left: 50%;
-  margin-left: -12px;
-  margin-top: -4px;
-  position: absolute;
-  top: 50%;
-  width: 64px;
-}
-
-.lock:before, .lock:after {
-  content: "";
-  left: 4px;
-  position: absolute;
-}
-
-.open:before, .open:after {
-  animation: open 3s ease-in-out 0s forwards;
-  content: "";
-  left: 4px;
-  position: absolute;
-}
-
-.lock:before, .open:before {
-  border-top: 8px solid #eee;
-  border-left: 8px solid #eee;
-  border-right: 8px solid #eee;
-  border-radius: 32px 32px 0 0;
-  height: 32px;
-  top: -30px;
-  transform-origin: 1px 0;
-  width: 56px;
-}
-
-.lock:after, .open:after {
-  background-color: #eee;
-  height: 40px;
-  top: -4px;
-  width: 8px;
-}
-
-.lock .keyhole,
-.open .keyhole {
-  position: absolute;
-  width: 10px;
-  height: 16px;
-  background-color: rgb(21, 23, 27);
-  border-radius: 5px;
-  top: 16px;
-  left: 27px;
-}
-
-@keyframes open {
-  0%, 10% {
-    transform: translate(0%, 0%);
-  }
-  20%, 100% {
-    transform: translate(0%, -12px);
-  }
-}
-
 .resultsWrapper {
     align-items: center;
     display: flex;
     flex-direction: column;
-    padding: 5rem 2rem 0 2rem;
+    gap: 2rem;
+    padding: 3rem 0 0 0;
     width: 100%;
 }
 
 .resultItem {
     display: flex;
-    justify-content: center;
-    padding: 3rem 6rem;
-    width: 100%;
+    flex-direction: column;
+    gap: 16px;
+    max-width: 100%;
+    width: auto;
 }
 
 .resultNumbers {
     display: flex;
-    gap: 0.5rem;
 }
 
 .number {
     border: 1px solid hsl(240, 6%, 48%);
-    font-size: 1.4rem;
-    padding: 0.75rem 1.5rem;
+    font-size: 1.25rem;
+    padding: 0.5rem 1rem;
 }
 
 .resultLights {
     align-items: center;
     display: flex;
-    gap: 5%;
-    justify-content: flex-end;
-    width: 50%
+    justify-content: space-around;
+    width: 100%
 }
 
 @-webkit-keyframes flashing {
@@ -137,22 +68,22 @@
 .yellow,
 .red {
     border-radius: 50%;
-    height: 22px;
-    width: 22px;
+    height: 16px;
+    width: 16px;
 }
 
 .green {
-    background-color: hsl(96, 100%, 30%);
+    background-color: hsl(118, 93%, 36%);
     box-shadow: black 0 -1px 7px 1px, inset hsl(80, 100%, 20%) 0 -1px 9px, hsl(80, 100%, 43%) 0 2px 12px;
 }
 
 .yellow {
-    background-color: hsl(60, 93%, 42%);
+    background-color: hsl(60, 80%, 49%);
     box-shadow: black 0 -1px 7px 1px, inset hsl(60, 100%, 20%) 0 -1px 9px, hsl(60, 100%, 43%) 0 2px 12px;
 }
 
 .red {
-    background-color: hsl(0, 84%, 46%);
+    background-color: hsl(0, 100%, 50%);
     box-shadow: black 0 -1px 7px 1px, inset hsl(0, 100%, 20%) 0 -1px 9px, hsl(0, 100%, 43%) 0 2px 12px;
     -webkit-animation-name: flashing;
           animation-name: flashing;
@@ -173,13 +104,40 @@
     }
 
     .resultsWrapper {
-
+      max-width: 1600px;
+      padding: 5rem 2rem 0 2rem;
     }
 
     .resultItem {
+      flex-direction: row;
+      gap: 0;
+      justify-content: center;
+      padding: 3rem 6rem;
+      width: 100%;
+    }
 
+    .resultNumbers {
+      gap: 0.5rem;
+    }
+
+    .number {
+      font-size: 1.4rem;
+      padding: 0.75rem 1.5rem;
     }
     
+    .resultLights {
+      gap: 5%;
+      justify-content: flex-end;
+      width: 50%
+    }
+
+    .green,
+    .yellow,
+    .red {
+        height: 22px;
+        width: 22px;
+    }
+
     .resultText {
         
     }
